Fixing spacing issues between back button

--- a/src/targets/meandall/styles/views/reservation.less
+++ b/src/targets/meandall/styles/views/reservation.less
@@ -208,6 +208,8 @@ main.reservation-page {
       color: @c-link;
       margin: 0;
       padding: 0;
+      height: 21px;
+      line-height: 21px;
       &:before {
         border: 0px none;
         font-size: @size--1;
@@ -247,6 +249,7 @@ main.reservation-page {
           td {
             font-weight: normal;
             font-family: @ff-default;
+            padding-top:10px;
             .viewport-mobile & {
               padding: 10px 0;
             }
